samples/_failures_safe/1761470249_773302_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5107a6a.c: In function ‘main’:
./samples/SAFE/__tmp_f5107a6a.c:154:12: error: missing terminating " character
  154 |     printf("Enter source node for Dijk
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f5107a6a.c:154:5: error: expected expression at end of input
  154 |     printf("Enter source node for Dijk
      |     ^~~~~~
./samples/SAFE/__tmp_f5107a6a.c:154:5: error: expected declaration or statement at end of input
